# utlz

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: utlz.hpp
include/utlz/: all.hpp  arrays.hpp  math.hpp  scoped.hpp  strings.hpp
src/: CMakeLists.txt  arrays.hpp  defs.hpp  math.hpp  scoped.hpp  strings.cpp  strings.hpp  utlz.hpp
test/: CMakeLists.txt  doctest_header.hpp  scoped_tests.cpp  tests.cpp
